# docs/swagger.yaml
@@ -165,4 +165,44 @@ paths:
       summary: Get the current owner of the delivery contract token
       tags:
       - order
+  /payment/order/{orderId}:
+    post:
+      consumes:
+      - application/json
+      description: This action changes the status of an order, either by accepting
+        delivery or canceling it
+      parameters:
+      - description: If this is a delivery, the delivery recipient's private key (not
+          a good idea in real life!)
+        in: query
+        name: customerKey
+        type: string
+      - description: the ID of the order being updated
+        in: path
+        name: orderId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ApiError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ApiError'
+      summary: Pays ether from the customer to the delivery contract for the price
+        of the goods
+      tags:
+      - order
 swagger: "2.0"
